Changelog
=========

7.3-dev - (unreleased)
----------------------

7.2 - (2013-08-19)
------------------
* Bug fix: get rid of Products.kupu dependencies, we use TinyMCE now.
  [tiberich]
* Bug fix: use new method of seting up TinyMCE, according to upstream
  API changes
  [tiberich #15645]

7.1 - (2013-08-09)
------------------
* Bug fix: corrected the temporal coverage formatting by re-use existing
  well working logic. Do not re-invent the wheel.
  [demarant #14871]
* Bug fix: corrected mapping of ESMS DATA_DESCR.
  [demarant #14871]
* Bug fix: improved esms xml unicode handling for certain cases like typology metadata.
  [demarant #14871]
* Feature: added @@esms.xml view for assessments to export information
  according to ESMS metadata format
  [tiberich, demarant #14871 EEA]
* Feature: added a @@assessments_latest_versions_links view that retrieves a
  list of all published assessments, only the latest versions
  [tiberich #14871 EEA]
* Bug fix: added a content rule to enable discussions on Assessments when the
  'show' or 'publishEionet' transitions are executed.
  [tiberich #14858]
* Bug fix: don't try to set discussionAllowed on assessments from code; this
  will be done from a content rule.
  [tiberich #14858]

7.0 - (2013-06-17)
------------------
* Change: updated figures.pt for multiple data provenances
  [szabozo0 #9561]
* Bug fix: improvements to layout and formatting of IMS
  [tiberich #14562]
* Bug fix: hide the themes widget from External Data Spec objects edit as had no use and misslead the editors
  [ghicaale refs #14732]

6.9 - (2013-05-27)
------------------
* Bug fix: make frequency_of_updates and its subfields not required;
  override mutator for frequency of updates, fix its validator to
  allow schemata_edit to work properly and ignore this field
  [tiberich #14628]

6.8 - (2013-05-20)
------------------
* Bug fix: fixed ReST merkup under HISTORY.txt
  [ghicaale refs #14554]

6.7 - (2013-05-20)
------------------